HTML layout is created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Url Builder</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet"> 
+    </head>
+    <body>
+        <div class="header">URL Builder</div>
 
+        <div class="main">
+            <div class="firstheading">Enter URL and parameters</div>
+            <div class="url">
+                <p><span>*</span> Original URL <input></p> 
+            </div>
+            <div class="source">
+                <p><span>*</span> Source <input></p> 
+            </div>
+            <div class="team">
+                <p><span>*</span> Team <input></p> 
+            </div>
+            <div class=generatedurl>
+            <div class=secondheading>Generated URL</div>
+                <input><br>
+                <button>Copy URL</button>
+            </div>
+        </div>
+    </body>
+</html>
